# ocypode-lang

./: 404.html  CHANGELOG.md  Cargo.toml  README.md  grammar.pest  index.html  print.html  searchindex.js  searchindex.json
.github/workflows/: assets.yml  book-deploy.yml  ci.yml  release-and-deploy.yml  release.yml
book/: book.toml
book/src/: SUMMARY.md  getting-started.md  intro.md
pages/: getting-started.html  introduction.html
pages/built-in-functions/: format.html  input.html  intro.html  len.html  pop.html  print.html  println.html  push.html
pages/functions/: anonymous.html  global.html  intro.html  local.html  packing.html  unpacking.html
pages/types/: arrays.html  booleans.html  float.html  integer.html  intro.html  nil.html  strings.html
pages/variables/: intro.html
src/: errors.rs  lib.rs  main.rs
src/diagnostics/: mod.rs
src/front/: ast.rs  mod.rs  parser.rs  utils.rs
src/runtime/: environment.rs  interpreter.rs  mod.rs
style/: book.css
tests/: mod.rs
tests/diagnostics/: already_declared_function.oy  already_declared_function.txt  already_declared_variable.oy  already_declared_variable.txt  format_error.oy  format_error.txt  invalid_exit_code.oy  invalid_exit_code.txt  invalid_function_name.oy  invalid_function_name.txt  invalid_parameter_name.oy  invalid_parameter_name.txt  invalid_variable_name.oy  invalid_variable_name.txt  main_function_cannot_be_public.oy  main_function_cannot_be_public.txt  main_function_contains_more_than_tow_parameters.oy  main_function_contains_more_than_tow_parameters.txt  missing_main_function.oy  mod.rs  (+19 more)
(+44 files in other folders)
